--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="pixi.min.js"></script>
     <script src="tween.js"></script>
     <script src="game.js"></script>
+    <!-- <script src="playLevels.js"></script> -->
 
 </head>
 
@@ -26,15 +27,18 @@
             copyOfParent.constructor = childObject;
             childObject.prototype = copyOfParent;
         }
+        var i =0;
 
         function Friend(texture, name, xPos) {
-
+           this.avatarSprite = [];
             // Game.call(this);
             var game = new Game();
 
             yPos = game.marginTop + 200;
 
             PIXI.Sprite.call(this, texture);
+
+            // this.avatarSprite[i] = new PIXI.Sprite(texture);
 
             this.name = new PIXI.Text(name, {
 
@@ -88,7 +92,7 @@
                 this.scale.set(.25);
                 this.name.scale.set(1.1);
                 this.name.position.set(xPos + 50, yPos + 160);
-
+              
              }
 
             function deleteInteraction() {
@@ -121,18 +125,26 @@
 
             }
             value = game;
+
             this.on('click', nextOne)
 
             function nextOne(available) {
                 self = this;
+                friendObj = new Friend();
                 game.prepareStage(self);
                 game.interAction();
                 game.displayStage();
                 game.selectAllSpritesOfFriend();
-                value.avatarCntr.visible = false;
+
+              //     for (var i = 1; i < 6; i++) {
+              //
+              //   game.avatars[i].visible = false;
+              // }
+
 
             }
         };
+
 
         inheritPrototype(Friend, PIXI.Sprite);
 
